--- a/style.css
+++ b/style.css
@@ -5,8 +5,83 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none; /* Tira o sublinhado da palavra/lista */
+    text-decoration: none; /* Tira a bolinha da palavra/lista */
 }
 
+:root{
+    --font-primary: "Baloo Da 2", serif;
+    --font-secundary: "Josefin Slab", serif;
+    --font-action: "Mulish", serif;
+}
+
+.hamburguer{
+    /*background-color: red;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    cursor: pointer;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.show-menu .hamburguer{
+    right: 16rem;
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: white;
+    box-shadow: 0.1rem 0.1rem 1px black;
+    transition: transform 1s;
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(.3rem, .45rem);
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3{
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+}
+
+.hamburguer span{
+    font-family: var(--font-action);
+    color: #555;
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex; /* centraliza o texto tanto na vertical, quanto na horizontal*/
+    justify-content: center;
+    align-items: center;
+    background-color: yellow;
+    opacity: 0;
+
+}
+
+.hamburguer span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid yellow;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hamburguer:hover span{
+    opacity: 1;
+}
 
 header{
     width: 100%;
@@ -49,7 +124,7 @@ header{
 .banner h1{
     color: white;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .2rem .3rem 2px rgba(0,0,0,.4);
     line-height: 3.5rem;
@@ -59,7 +134,7 @@ header{
 }
 
 .banner p{
-    font-family: "Josefin Slab", serif;
+    font-family: var(--font-secundary);
     color: white;
     font-size: 2rem;
     text-shadow: .2rem .3rem 2px rgba(0,0,0,.4);
@@ -69,7 +144,7 @@ header{
 }
 
 .banner button{
-    font-family: "Mulish", serif;
+    font-family: var(--font-action);
     color: black;
     cursor: pointer;
     letter-spacing: 0.1rem;
@@ -95,4 +170,70 @@ header{
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all .7s; /* Tempo para abrir ou fechar o menu */
+}
+
+/* Animação do menu para deixar aberto ou fechado */
+.show-menu .sidebar{
+    right: 0;
+}
+
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);   
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s; /* transição de cor de (home, conhecimentos, contato...) mais suave e mais lenta */
+}
+
+.menu-link:hover{
+    color: rgb(235, 61, 30);
+}
+
+.social-media{
+    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+}
+
+.social-media i{
+    color: #ffff;
+    height: 2.5rem;
+    width: 2.5rem;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    transition: color 1s;
+}
+
+.social-media i:hover{
+    color: #555;
+}
+
+.social-media gitimg{
+    padding-right: .5rem;
 }
