--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 
 .show-menu .hamburguer{
     right: 16rem;
+    transition: right 0.5s ease 0.1s;
 }
 
 .line{
@@ -180,6 +181,7 @@ header{
     top: 0;
     right: -20rem;
     transition: all .7s; /* Tempo para abrir ou fechar o menu */
+    z-index: 99; /* Faz com que o menu de home (branco) fique por cima das imagens dos projetos lá embaixo */
 }
 
 /* Animação do menu para deixar aberto ou fechado */
@@ -237,3 +239,177 @@ header{
 .social-media gitimg{
     padding-right: .5rem;
 }
+
+.conhecimentos {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: 0.5rem;
+  }
+  
+  .conhecimento:nth-child(1) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+  }
+  
+  .conhecimento:nth-child(2) {
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+  }
+  
+  .conhecimento:nth-child(3) {
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+  }
+  
+  .conhecimento:nth-child(4) {
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+  }
+  
+  .conhecimento:nth-child(5) {
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+  }
+  
+  .conhecimento:nth-child(6) {
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+  }
+  
+  .sessao-conhecimentos {
+    background-color: #f5f5f5;
+    height: 100%;
+  }
+  
+  .sessao-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .sessao-header h1 {
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #4b4b4b;
+    border-bottom: solid 3px #be4021;
+    margin-bottom: 1.5rem;
+  }
+  
+  .conhecimento-header {
+    display: flex;
+    align-items: center;
+    color: #4b4b4b;
+  }
+  
+  .conhecimento-header i {
+    font-size: 2.5rem;
+  }
+  
+  .conhecimento-header h3 {
+    font-family: var(--font-secundary);
+    font-size: 2rem;
+    padding-left: 1rem;
+  }
+  
+  .conhecimento-text {
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+  }
+
+  .conhecimentos-img-wrapper{
+      grid-column: 7 / 11;
+      grid-row: 2 / 6;
+      width: 100%;
+      padding-top: 70px;
+  }
+
+  .conhecimentos-img-wrapper img{
+      object-fit: cover;
+      width: 100%;
+  }
+
+  .projetos{
+      display: flex;
+      justify-content: space-evenly; /* Faz o espalhamento das imagens coladas umas nas outras */   
+  }
+
+  .card{
+      width: 18rem; /* Delimitando o tamanho da imagem dentro do card! */
+      height: 25rem;
+      position: relative;
+  }
+
+  .card-img-wrapper{
+      width: 100%;
+      height: 100%;
+      background-color: #262626;
+      border-radius: .5rem;
+  }
+
+  .card-img-wrapper img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      border-radius: .5rem;
+      opacity: .8;
+      transition: opacity .3s;
+  }
+
+  .card:hover .card-img-wrapper img{
+      opacity: .5;
+  }
+
+  .card-info{
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    padding: 2rem;
+    text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, .4);
+    transition: all .3s;
+  }
+
+  .card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: #eee;
+  }
+
+  .card-info h3{
+    font-family: var(--font-action);
+    font-weight: bolder;
+    color: #be4021;
+    margin-bottom: 1.5rem;
+  }
+
+  .card-info p {
+    font-family: var(--font-secundary);
+    color: #eee;
+    font-weight: 400;
+    width: 80%;
+    margin-bottom: 2rem;
+  }
+
+  .btn {
+    background: #bd5113;
+    background: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+    font-family: var(--font-action);
+    color: #eee;
+    border-radius: 0.5rem;
+    border: none;
+    box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4); 
+  }
+  
+  .card-info button {
+    width: 8rem;
+    height: 2.5rem;
+  }
+  
+  .card:hover .card-info {
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+  }
