--- a/style.css
+++ b/style.css
@@ -248,48 +248,48 @@ header{
     row-gap: 0.5rem;
   }
   
-  .conhecimento:nth-child(1) {
+.conhecimento:nth-child(1) {
     grid-column: 4 / 7;
     grid-row: 1 / 3;
   }
   
-  .conhecimento:nth-child(2) {
+.conhecimento:nth-child(2) {
     grid-column: 3 / 6;
     grid-row: 3 / 5;
   }
   
-  .conhecimento:nth-child(3) {
+.conhecimento:nth-child(3) {
     grid-column: 4 / 7;
     grid-row: 5 / -1;
   }
   
-  .conhecimento:nth-child(4) {
+.conhecimento:nth-child(4) {
     grid-column: 11 / 14;
     grid-row: 1 / 3;
   }
   
-  .conhecimento:nth-child(5) {
+.conhecimento:nth-child(5) {
     grid-column: 12 / 15;
     grid-row: 3 / 5;
   }
   
-  .conhecimento:nth-child(6) {
+.conhecimento:nth-child(6) {
     grid-column: 11 / 14;
     grid-row: 5 / -1;
   }
   
-  .sessao-conhecimentos {
+.sessao-conhecimentos {
     background-color: #f5f5f5;
     height: 100%;
   }
   
-  .sessao-header {
+.sessao-header {
     display: flex;
     align-items: center;
     justify-content: center;
   }
   
-  .sessao-header h1 {
+.sessao-header h1 {
     font-family: var(--font-primary);
     font-size: 3rem;
     color: #4b4b4b;
@@ -297,58 +297,58 @@ header{
     margin-bottom: 1.5rem;
   }
   
-  .conhecimento-header {
+.conhecimento-header {
     display: flex;
     align-items: center;
     color: #4b4b4b;
   }
   
-  .conhecimento-header i {
+.conhecimento-header i {
     font-size: 2.5rem;
   }
   
-  .conhecimento-header h3 {
+.conhecimento-header h3 {
     font-family: var(--font-secundary);
     font-size: 2rem;
     padding-left: 1rem;
   }
   
-  .conhecimento-text {
+.conhecimento-text {
     font-family: var(--font-secundary);
     margin-top: 1rem;
   }
 
-  .conhecimentos-img-wrapper{
+.conhecimentos-img-wrapper{
       grid-column: 7 / 11;
       grid-row: 2 / 6;
       width: 100%;
       padding-top: 70px;
   }
 
-  .conhecimentos-img-wrapper img{
+.conhecimentos-img-wrapper img{
       object-fit: cover;
       width: 100%;
   }
 
-  .projetos{
+.projetos{
       display: flex;
       justify-content: space-evenly; /* Faz o espalhamento das imagens coladas umas nas outras */   
   }
 
-  .card{
+.card{
       width: 18rem; /* Delimitando o tamanho da imagem dentro do card! */
       height: 25rem;
       position: relative;
   }
 
-  .card-img-wrapper{
+.card-img-wrapper{
       width: 100%;
       height: 100%;
       background-color: #262626;
       border-radius: .5rem;
   }
 
-  .card-img-wrapper img{
+.card-img-wrapper img{
       object-fit: cover;
       width: 100%;
       height: 100%;
@@ -357,11 +357,11 @@ header{
       transition: opacity .3s;
   }
 
-  .card:hover .card-img-wrapper img{
+.card:hover .card-img-wrapper img{
       opacity: .5;
   }
 
-  .card-info{
+.card-info{
     position: absolute;
     bottom: 0;
     opacity: 0;
@@ -371,21 +371,21 @@ header{
     transition: all .3s;
   }
 
-  .card-info h2{
+.card-info h2{
     font-family: var(--font-primary);
     font-size: 2rem;
     font-weight: 500;
     color: #eee;
   }
 
-  .card-info h3{
+.card-info h3{
     font-family: var(--font-action);
     font-weight: bolder;
     color: #be4021;
     margin-bottom: 1.5rem;
   }
 
-  .card-info p {
+.card-info p {
     font-family: var(--font-secundary);
     color: #eee;
     font-weight: 400;
@@ -393,7 +393,7 @@ header{
     margin-bottom: 2rem;
   }
 
-  .btn {
+.btn {
     background: #bd5113;
     background: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
     font-family: var(--font-action);
@@ -403,13 +403,107 @@ header{
     box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4); 
   }
   
-  .card-info button {
+.card-info button {
     width: 8rem;
     height: 2.5rem;
   }
   
-  .card:hover .card-info {
+.card:hover .card-info {
     bottom: 2rem;
     opacity: 1;
     visibility: visible;
   }
+
+.sessao-contato{
+      width: 100%;
+      height: 100vh;
+      background-color: #f5f5f5;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+
+.contato-wrapper{
+    width: 60%;
+    height: 30rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem rgba(0,0,0,0.5);
+}
+
+.contato-left{
+    width: 35%;
+    background: linear-gradient(rgba(15,15,15,0.3), rgba(22,22,22,0.6)) , url(imagens/contato.jpg);
+    background-size: cover; /* A imagem vai cobrir a div */
+}
+
+.contato-right{
+    width: 65%;
+    background-color: white;
+    padding: 1rem 3rem 3rem 3rem;
+}
+
+.sessao-contato h1{
+    width: 100%;
+    text-align: center;
+    font-family: var(--font-primary);
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+}
+
+.sessao-contato form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-group{
+    position: relative;
+}
+
+.field{
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.5rem;
+    font-family: var(--font-secundary);
+    border-bottom: 2px dashed #636363;
+    height: 3rem;
+    outline: none;
+    margin: 1rem 0; /* Margem entre os campos (nome, email e mensagem) */
+}
+
+.input-group textarea{
+    padding-top: 1rem;
+    max-width: 25rem;
+    max-height: 3rem;
+}
+
+.field-label{
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    font-size: 1rem;
+    font-family: var(--font-secundary);
+    text-transform: uppercase;
+    transition: all 0.3s;
+}
+
+.field:valid ~ label, .field:focus ~ label{
+    top: 0;
+    font-size: 0.7rem;
+}
+
+.field:focus{
+    border-bottom: 1px solid;
+}
+
+.btn-submit{
+    font-size: 1.2rem;
+    width: 100%;
+    height: 2rem;
+    text-transform: uppercase;
+    margin-top: 1rem;
+    cursor: pointer;
+}
